[#67] Code refactored and extended for obtaining service address
